--- a/client/src/components/FooterTemp/index.css
+++ b/client/src/components/FooterTemp/index.css
@@ -8,6 +8,9 @@
     padding-top: 50px;
     padding-bottom: 100px;
     color: white;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer-title{
